<resources>
    <string name="app_name">Administración De Condominios</string>
    <string name="facebook_app_id">350839409472214</string>
    <string name="fb_login_protocol_scheme">fb350839409472214</string>

    <string name="spinner">Spinner</string>
    <string name="button">Aceptar</string>
    <string name="txt_cuenta">Estado de Cuenta</string>
    <string name="txt_salon">Reservar Salón</string>
    <string name="txt_avisos">Avisos</string>
    <string name="txt_configuracion">Configuración</string>

    <string name="txt_identificacion">Identificación</string>
    <string name="txt_nombre">Nombre</string>
    <string name="txt_telefono">Número de teléfono</string>
    <string name="boton">Insertar</string>


    <string name="txt_Seleccion">Seleccione la fecha y hora</string>
    <string name="txt_fecha">Fecha:</string>
    <string name="txt_hora">Hora:</string>
    <string name="btn_fecha">Fecha</string>
    <string name="btn_hora">Hora</string>
    <string name="btn_reserva">Reservar</string>

    <string name="txt_fechaInicial">Fecha Inicial</string>
    <string name="txt_fechaFinal">Fecha Final</string>
    <string name="btn_consultar">Consultar</string>
    <string name="fecha">Fecha</string>
    <string name="descripcion">Descripcion</string>
    <string name="monto">Monto</string>

    <string name="txt_fechayhora">Fecha / Hora</string>
    <string name="txt_usuario">Usuario</string>

</resources>